--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ p {
       font-size: 16px; } }
 
 .bg_cover {
-  background-position: center center;
+  background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -627,7 +627,7 @@ p {
       top: 0; } }
 
 .header-banner {
-  height: 700px;
+  height: 800px;
   position: relative; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .header-banner {
@@ -1179,7 +1179,7 @@ p.form-message.error {
 ===========================*/
 .map-area {
   position: relative;
-  height: 600px; }
+  height: 800px; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .map-area {
       height: 450px; } }
@@ -1200,7 +1200,7 @@ p.form-message.error {
       width: 100%; } }
   .mapouter .gmap_canvas iframe {
     width: 100%;
-    height: 600px; }
+    height: 800px; }
     @media only screen and (min-width: 768px) and (max-width: 991px) {
       .mapouter .gmap_canvas iframe {
         height: 450px; } }
